# ProteinTool

./: .gitignore  ProteinTool.cabal
lib/: pt_bfactor
src/: Fasta.hs  FileSystem.hs  Format.hs  Makefile  bfactor.hs  fasta.hs  fasta2csv.hs  levenshtein  levenshtein.hs
