cabal-version:      3.6
name:               ProteinTool
version:            0.1.0.0
synopsis:           
description:        
homepage:
bug-reports:
license:            MIT
author:             Le Niu <overshiki>
maintainer:         Le Niu <le.niu@hotmail.com>
copyright:          Copyright (C) 2023 Le Niu
category:           experimental
extra-source-files: CHANGELOG.md
                    README.md

executable fasta2csv
    main-is:                fasta2csv.hs
    hs-source-dirs:         src
    Build-Depends:          base, streamly-core, bytestring, split, process, directory
    -- , text
    other-modules:          FileSystem, Fasta
